PrettyItemDelegate: fix visual overflow of the queued track indicator

This is a slightly tweaked version (visually and behaviourally) of
Riccardo Ferrazzo's patch, thanks for it!

BUGFIXES:
 * Fix queued track indicator overflow, patch by Riccardo Ferrazzo.

BUG: 253802
FIXED-IN: 2.7
REVIEW: 107796